[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/MusicFader.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "1to2"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("music1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("music2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "2to1"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("music1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("music2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="MusicFader" type="Node2D"]
script = ExtResource( 1 )

[node name="music1" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
bus = "Music"

[node name="music2" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/1to2 = SubResource( 1 )
anims/2to1 = SubResource( 2 )
[connection signal="finished" from="music1" to="." method="_on_music1_finished"]
[connection signal="finished" from="music2" to="." method="_on_music2_finished"]
